homepage spacing fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -308,7 +308,7 @@ main {
   }
 
   .intro {
-    margin-top: -150px;
+    margin-top: -70px;
   }
 }
 
